@@ -1536,3 +1536,10 @@ MRREVIEWER = {Attila Nagy},
   
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+@article{SUER,
+    AUTHOR = {Süer, M.},
+     TITLE = {Irreducibility of Arf numerical semgroups},
+   JOURNAL = {preprint},
+      YEAR = {2022},
+}
