@@ -206,6 +206,62 @@ gap> List(last,MinimalGenerators);
                 </ManSection>
 
 
+                <ManSection>
+                    <Oper Arg="s" Name="ArfSpecialGaps"></Oper>
+                    <Description>
+                        <A>s</A> is an Arf numerical semigroup. The output is the set of gaps <M>g</M> of <A>s</A> such that <M><A>s</A>\cup \{g\}</M> is an Arf numerical semigroup. The implementation is based on <Cite Key="SUER"></Cite>. 
+                        <Example><![CDATA[
+gap> s:=NumericalSemigroup(10,24,25,26,27,28,29,31,32,33);;
+gap> ArfSpecialGaps(s);
+[ 15, 22, 23 ]
+]]></Example>
+                    </Description>
+                </ManSection>
+
+                <ManSection>
+                    <Oper Arg="s" Name="ArfOverSemigroups"></Oper>
+                    <Description>
+                        <A>s</A> is an Arf numerical semigroup. The output is the set of Arf oversemigroups of <A>s</A>. The implementation is based on <Cite Key="SUER"></Cite>. 
+                        <Example><![CDATA[
+gap> s:=NumericalSemigroup(6,9,11,13,14,16);;
+gap> List(ArfOverSemigroups(s),MinimalGenerators);
+[ [ 1 ], [ 2, 3 ], [ 2, 5 ], [ 2, 7 ], [ 2, 9 ], [ 3 .. 5 ], [ 3, 5, 7 ], 
+  [ 3, 7, 8 ], [ 3, 8, 10 ], [ 3, 10, 11 ], [ 3, 11, 13 ], [ 4 .. 7 ], 
+  [ 4, 6, 7, 9 ], [ 4, 6, 9, 11 ], [ 5 .. 9 ], [ 6 .. 11 ], 
+  [ 6, 8, 9, 10, 11, 13 ], [ 6, 9, 10, 11, 13, 14 ], 
+  [ 6, 9, 11, 13, 14, 16 ] ]
+]]></Example>
+                    </Description>
+                </ManSection>
+
+
+                <ManSection>
+                    <Prop Arg="s" Name="IsArfIrreducible"></Prop>
+                    <Description>
+                        <A>s</A> is an Arf numerical semigroup. Detects if <A>s</A> is Arf-irreducible, that is, irreducible in the Frobenius variety of Arf numerical semigroups. The implementation is based on <Cite Key="SUER"></Cite>. 
+                        <Example><![CDATA[
+gap> s:=NumericalSemigroupBySmallElements([0,10,17,20]);;
+gap> IsArfIrreducible(s);
+true
+gap> IsIrreducible(s);
+false
+]]></Example>
+                    </Description>
+                </ManSection>
+
+                <ManSection>
+                    <Oper Arg="s" Name="DecomposeIntoArfIrreducibles"></Oper>
+                    <Description>
+                        <A>s</A> is an Arf numerical semigroup. The output is a set of Arf irreuducible numerical semigroups whose intersection is <A>s</A>. This decomposition is not redundant in the sense that no semigroup can be removes. The implementation is based on <Cite Key="SUER"></Cite>. 
+                        <Example><![CDATA[
+gap> s:=NumericalSemigroup(6,9,11,13,14,16);;
+gap> List(DecomposeIntoArfIrreducibles(s),MinimalGenerators);
+[ [ 2, 9 ], [ 3, 11, 13 ] ]
+]]></Example>
+                    </Description>
+                </ManSection>
+
+
             </Section>
 	    <Section>
                 <Heading>
